tests/parser/invalid_defer_mode.err.out
tests/parser/invalid_defer_mode.err.ri:6:11: error: unknown `defer` mode
      | 
    6 |     defer(error1) {} // fail
      |           ^~~~~~            
      = note: valid `defer` modes are `success` and `error`
tests/parser/invalid_defer_mode.err.ri:7:11: error: unknown `defer` mode
      | 
    7 |     defer(success1) {} // fail
      |           ^~~~~~~~            
      = note: valid `defer` modes are `success` and `error`
error: could not compile `invalid_defer_mode` module, aborting due to 2 previous errors